--- a/package.json
+++ b/package.json
@@ -8,8 +8,32 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/lodash.shuffle": "^4.2.6",
+    "@types/reactstrap": "^8.4.2",
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
+    "bootstrap": "^4.4.1",
+    "lodash.shuffle": "^4.2.0",
     "next": "9.2.1",
+    "next-images": "^1.3.0",
+    "node-sass": "^4.13.1",
     "react": "16.12.0",
-    "react-dom": "16.12.0"
+    "react-dom": "16.12.0",
+    "reactstrap": "^8.4.1"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.149",
+    "@types/node": "^13.7.1",
+    "@types/react": "^16.9.19",
+    "@types/react-dom": "^16.9.5",
+    "@typescript-eslint/eslint-plugin": "^2.19.2",
+    "@typescript-eslint/parser": "^2.19.2",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-hooks": "^2.3.0",
+    "typescript": "^3.7.5"
   }
 }
