--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "node-sass": "^4.13.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "react-spring": "^8.0.27",
     "reactstrap": "^8.4.1"
   },
   "devDependencies": {
